{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 109,
  "lineage": "c77c2a63-2fcf-af70-95b0-e544361f3995",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03161912023f6631c",
            "association_id": "eipassoc-0a81160136cdb09e4",
            "domain": "vpc",
            "id": "eipalloc-03161912023f6631c",
            "instance": "i-003e31c6fe38ee703",
            "network_border_group": "us-east-1",
            "network_interface": "eni-003a07285e5cca4c5",
            "private_dns": "ip-10-10-0-42.ec2.internal",
            "private_ip": "10.10.0.42",
            "public_dns": "ec2-18-213-107-154.compute-1.amazonaws.com",
            "public_ip": "18.213.107.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-eip",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "EIP"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-eip",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.instance-profile",
            "aws_key_pair.ec2",
            "module.ec2.aws_instance.this",
            "module.sg_ec2.aws_security_group.this",
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "hackerbox-live-ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0ea68c435eb488d",
            "arn": "arn:aws:ec2:us-east-1:817859197488:instance/i-003e31c6fe38ee703",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hackerbox-live-instance-profile",
            "id": "i-003e31c6fe38ee703",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "hackerbox-live-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-003a07285e5cca4c5",
            "private_dns": "ip-10-10-0-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.42",
            "public_dns": "ec2-52-73-152-50.compute-1.amazonaws.com",
            "public_ip": "52.73.152.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-0b8a0ed065d616d88",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0297a3c8d75bad424",
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-ec2",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "EC2"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-ec2",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "EC2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "live",
              "Name": "hackerbox-live-root-block",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "EBS"
            },
            "vpc_security_group_ids": [
              "sg-0ef80e67837c26e79"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance-profile",
            "aws_key_pair.ec2",
            "module.sg_ec2.aws_security_group.this",
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:security-group/sg-0ef80e67837c26e79",
            "description": "SG for hackerbox live EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http-80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https-443",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0ef80e67837c26e79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http-80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https-443",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hackerbox-live-ec220221217063815350400000001",
            "name_prefix": "hackerbox-live-ec2",
            "owner_id": "817859197488",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-ec2",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Security Group"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-ec2",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7c9d1bc10ec7c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_ec2-rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule01",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https-443",
            "from_port": 443,
            "id": "sgrule-489963673",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef80e67837c26e79",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_ec2.aws_security_group.this",
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "rule02",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http-80",
            "from_port": 80,
            "id": "sgrule-2080547911",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef80e67837c26e79",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_ec2.aws_security_group.this",
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "rule03",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-1015061708",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef80e67837c26e79",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_ec2.aws_security_group.this",
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "rule04",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https-443",
            "from_port": 443,
            "id": "sgrule-1962055430",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef80e67837c26e79",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_ec2.aws_security_group.this",
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "rule05",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http-80",
            "from_port": 80,
            "id": "sgrule-646179837",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef80e67837c26e79",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_ec2.aws_security_group.this",
            "module.vpc.aws_default_route_table.main_route_table",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.route-private",
            "module.vpc.aws_route.route-public",
            "module.vpc.aws_route_table.private_subnets-to-internet_route",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_route_table_association.private_subnet-assoc",
            "module.vpc.aws_route_table_association.public_subnet-assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:route-table/rtb-028565bbea6ceff30",
            "default_route_table_id": "rtb-028565bbea6ceff30",
            "id": "rtb-028565bbea6ceff30",
            "owner_id": "817859197488",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-default-rt",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Default Route Table"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-default-rt",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Default Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7c9d1bc10ec7c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:internet-gateway/igw-0786f20d557615a01",
            "id": "igw-0786f20d557615a01",
            "owner_id": "817859197488",
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-internet-gw",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Internet Gateway"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-internet-gw",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Internet Gateway"
            },
            "vpc_id": "vpc-0b7c9d1bc10ec7c73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0786f20d557615a01",
            "id": "r-rtb-093e370c95dc8d8371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093e370c95dc8d837",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets-to-internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:route-table/rtb-0a97f582644668651",
            "id": "rtb-0a97f582644668651",
            "owner_id": "817859197488",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-private-route-table",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Route Table"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-private-route-table",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7c9d1bc10ec7c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet-to-igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:route-table/rtb-093e370c95dc8d837",
            "id": "rtb-093e370c95dc8d837",
            "owner_id": "817859197488",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0786f20d557615a01",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-public-route-table",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Route Table"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-public-route-table",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7c9d1bc10ec7c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2ff0d3da9d372d4",
            "route_table_id": "rtb-093e370c95dc8d837",
            "subnet_id": "subnet-0297a3c8d75bad424"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a276442eeba660",
            "route_table_id": "rtb-093e370c95dc8d837",
            "subnet_id": "subnet-0e8ff0ebc886ed274"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_subnet-to-igw_route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:subnet/subnet-0297a3c8d75bad424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0297a3c8d75bad424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "817859197488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-public-subnet-01",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Public Subnet"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-public-subnet-01",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Public Subnet"
            },
            "vpc_id": "vpc-0b7c9d1bc10ec7c73"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:subnet/subnet-0e8ff0ebc886ed274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8ff0ebc886ed274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "817859197488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-public-subnet-02",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Public Subnet"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc-public-subnet-02",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "Public Subnet"
            },
            "vpc_id": "vpc-0b7c9d1bc10ec7c73"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817859197488:vpc/vpc-0b7c9d1bc10ec7c73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a6c1395b42083548",
            "default_route_table_id": "rtb-028565bbea6ceff30",
            "default_security_group_id": "sg-033a26f2e5dfe8285",
            "dhcp_options_id": "dopt-002ab702731a45971",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7c9d1bc10ec7c73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028565bbea6ceff30",
            "owner_id": "817859197488",
            "tags": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "VPC"
            },
            "tags_all": {
              "Environment": "live",
              "Name": "hackerbox-live-vpc",
              "Owner": "John Doe",
              "Project": "HACKERBOX",
              "Service": "VPC"
            }
          }
        }
      ]
    }
  ]
}